chore: add affected code

--- a/postcss-via-node/package.json
+++ b/postcss-via-node/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "site",
+	"name": "postcss-via-node",
 	"type": "module",
 	"devDependencies": {
 		"@tailwindcss/postcss": "4.0.0-beta.1",
